src/test/ui/type-alias-enum-variants/enum-variant-priority-higher-than-other-inherent.stderr
error[E0061]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/enum-variant-priority-higher-than-other-inherent.rs:21:5
   |
LL |     V(u8)
   |     ----- defined here
...
LL |     <E>::V();
   |     ^^^^^^^^ expected 1 parameter

error[E0308]: mismatched types
  --> $DIR/enum-variant-priority-higher-than-other-inherent.rs:22:17
   |
LL |     let _: u8 = <E2>::V;
   |                 ^^^^^^^ expected u8, found enum `E2`
   |
   = note: expected type `u8`
              found type `E2`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
